--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -69,35 +69,33 @@
         app:layout_constraintTop_toTopOf="parent"
         app:singleSelection="true">
         <Button
+            style="?attr/materialButtonOutlinedStyle"
             android:id="@+id/start_button"
+            android:state_selected="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="148dp"
-            android:backgroundTint="?attr/colorSecondaryContainer"
             android:text="@string/start_text"
-            android:textColor="?attr/colorOnSecondaryContainer"
-            android:textSize="20sp"
             app:icon="@drawable/baseline_play_circle_filled_24"
-            app:iconSize = "32dp"
             app:iconTint="?attr/colorOnSecondaryContainer"
-            app:layout_constraintBottom_toTopOf="@+id/progressBar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:iconSize="24dp"
+            android:textSize="20sp"
+            android:backgroundTint="?attr/colorSecondaryContainer"
+            android:textColor="?attr/colorOnSecondaryContainer"
+            />
         <Button
+            style="?attr/materialButtonOutlinedStyle"
             android:id="@+id/stop_button"
+            android:state_selected="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="52dp"
-            android:backgroundTint="?attr/colorSecondaryContainer"
             android:text="@string/stop_text"
-            android:textColor="?attr/colorOnSecondaryContainer"
-            android:textSize="20sp"
             app:icon="@drawable/baseline_stop_circle_24"
-            app:iconSize = "32dp"
             app:iconTint="?attr/colorOnSecondaryContainer"
-            app:layout_constraintBottom_toTopOf="@+id/progressBar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:iconSize="24dp"
+            android:textSize="20sp"
+            android:backgroundTint="?attr/colorSecondaryContainer"
+            android:textColor="?attr/colorOnSecondaryContainer"
+            />
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
 
