--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:id="@+id/edit"
+        android:contentDescription="@string/content_description_search"
+        android:icon="@drawable/baseline_settings_24"
+        android:iconTint="?attr/colorOnPrimary"
+        android:title="@string/settings"
         app:showAsAction="never" />
 </menu>
